--- a/app.json
+++ b/app.json
@@ -7,6 +7,10 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "android": {
+      "package": "com.guitdev.calculator",
+      "versionCode": 1
+    }
   }
 }
